add solution of project

--- a/CMS_Polizia/CMS_Polizia.csproj
+++ b/CMS_Polizia/CMS_Polizia.csproj
@@ -135,6 +135,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -168,6 +169,10 @@
     <Content Include="Views\Home\PuntiDecurtatiPerTrasgressore.cshtml" />
     <Content Include="Views\Home\ViolazioniOverTenPnt.cshtml" />
     <Content Include="Views\Home\ViolazioniOver400money.cshtml" />
+    <Content Include="Views\Home\Trasgressori.cshtml" />
+    <Content Include="Views\Home\Violazioni.cshtml" />
+    <Content Include="Views\Home\AggiungiVerbale.cshtml" />
+    <Content Include="Views\Home\ListaVerbali.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
